# mkdocs-callouts

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test_plugin.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: CI.yml  pages.yml  release.yml
src/mkdocs_callouts/: __init__.py  plugin.py  utils.py
tests/: test_plugin.py
tests/demo_pages/: mkdocs.yml
tests/demo_pages/docs/: extra.css  index.md
tests/demo_pages/docs/Issues/: nested codefences.md  nesting in blockquotes.md
tests/demo_pages/docs/Tests/: breakless lists.md  codeblock with indent.md  codeblock_with_indent  codeblocks.md  content tabs.md  custom.md  edgecases.md  false positives.md  inline.md  links.md  nested codefences.md  nested.md  no_title.md  regular blocks.md
tests/demo_pages/docs/Tests/blockquotes/: blockquotes-2.md  blockquotes-waterfall.md  blockquotes.md  tricky blockquote.md
